...
        buttonText = "취소",
        contentColor = Color(0xFF364153),
        containerColor = Color.White,
        elevation = 0.dp,
    ),
    DELETE(
        buttonText = "삭제",
        contentColor = Color.White,
        containerColor = Color(0xFFDB6365),
        elevation = 0.dp,
    ),

    EDIT(
...
